--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             color: Lightgray;
         }
         a:hover{
-            color:hotpink;
+            color:chartreuse;
         }
         a:active{
             color: blue;
@@ -25,7 +25,7 @@
         }
 
         #menu{
-            background-color: navy;
+            background-color:darkseagreen;
             text-align: center;
             padding: 30px 0px;
         }
@@ -56,25 +56,30 @@
             text-align: center;
         }
         #img_product>img{
-            width: 400px;
-            height:400px;
+            width: 300px;
+            height:300px;
             padding: 0px 40px;
         }
 
         #bottom{
             text-align: center;
-            font-size: 20px;
-            height: 150px;
+            font-size: 15px;
+            height: 60px;
             background-color: lightblue;
         }
-        #bottom>p{
-           
+
+        #bottom_color{
+            text-align: center;
+            font-size: 20px;
+            background-color: cornsilk;
+            height: 100px;
         }
+
     </style>
 </head>
 <body>
     <div id="logo">
-        PHONE
+        쌤쑹
     </div>
     <div id="menu">
         <span>
@@ -104,8 +109,31 @@
         <img src="./phone3.jpeg" alt="">
         <img src="./phone4.jpeg" alt="">
     </div>
+
+    <div id="product">
+        고 객 센 터
+    </div>
+    <br>
+
+    <div id="bottom_color">
+        <br>
+        이름 쌤쑹은 대한민국의 유명한 기업인 삼성의 이름을 독특한 방식으로 표현해서 만들어지게 되었다.
+    </div>
+
+    <div id="product">
+        공 지 사 항
+    </div>
+    <br>
+
+    <div id="bottom_color">
+        <br>
+        [* 매우 중요한 사실 *] <br>
+        여기에 적을 것이 전혀 떠오르지 않는 다는 사실...!
+    </div>
+    
     <div id="bottom">
     <p>
+        <br>
         Copyright (c) 2024 PHONE. All rights reserved.
     </p>
     </div>
